syntax = "proto3";
package gemini_coder;

import "exa/cortex_pb.proto";

message BackupMessage { bytes data = 1; }

message ConversationState {
  string trajectory_id = 1;
  ExecutionStatus status = 2;
  repeated Step staged_steps = 3;
  exa.cortex_pb.CascadeConfig execute_config = 4;
}

message Trajectory {
  string trajectory_id = 1;
  string cascade_id = 6;
  exa.cortex_pb.CortexTrajectoryType trajectory_type = 4;
  repeated Step steps = 2;
  repeated exa.cortex_pb.CortexTrajectoryReference parent_references = 5;
  repeated exa.cortex_pb.CortexStepGeneratorMetadata generator_metadata = 3;
  repeated exa.cortex_pb.ExecutorMetadata executor_metadatas = 9;
  exa.cortex_pb.CortexTrajectorySource source = 8;
  exa.cortex_pb.CortexTrajectoryMetadata metadata = 7;
}

message Step {
  exa.cortex_pb.CortexStepType type = 1;
  exa.cortex_pb.CortexStepStatus status = 4;
  exa.cortex_pb.CortexStepMetadata metadata = 5;
  exa.cortex_pb.CortexErrorDetails error = 31;
  exa.cortex_pb.TrajectoryPermissions permissions = 133;
  exa.cortex_pb.RequestedInteraction requested_interaction = 56;
  exa.cortex_pb.UserStepAnnotations user_annotations = 69;
  Trajectory subtrajectory = 6;
  oneof step {
    exa.cortex_pb.CortexStepGeneric generic = 140;
    exa.cortex_pb.CortexStepFinish finish = 12;
    exa.cortex_pb.CortexStepMquery mquery = 9;
    exa.cortex_pb.CortexStepCodeAction code_action = 10;
    exa.cortex_pb.CortexStepGitCommit git_commit = 11;
    exa.cortex_pb.CortexStepGrepSearch grep_search = 13;
    exa.cortex_pb.CortexStepCompile compile = 16;
    exa.cortex_pb.CortexStepViewCodeItem view_code_item = 22;
    exa.cortex_pb.CortexStepErrorMessage error_message = 24;
    exa.cortex_pb.CortexStepRunCommand run_command = 28;
    exa.cortex_pb.CortexStepFind find = 34;
    exa.cortex_pb.CortexStepSuggestedResponses suggested_responses = 36;
    exa.cortex_pb.CortexStepCommandStatus command_status = 37;
    exa.cortex_pb.CortexStepReadUrlContent read_url_content = 40;
    exa.cortex_pb.CortexStepViewContentChunk view_content_chunk = 41;
    exa.cortex_pb.CortexStepSearchWeb search_web = 42;
    exa.cortex_pb.CortexStepMcpTool mcp_tool = 47;
    exa.cortex_pb.CortexStepClipboard clipboard = 55;
    exa.cortex_pb.CortexStepViewFileOutline view_file_outline = 58;
    exa.cortex_pb.CortexStepListResources list_resources = 62;
    exa.cortex_pb.CortexStepReadResource read_resource = 63;
    exa.cortex_pb.CortexStepLintDiff lint_diff = 64;
    exa.cortex_pb.CortexStepOpenBrowserUrl open_browser_url = 67;
    exa.cortex_pb.CortexStepTrajectorySearch trajectory_search = 72;
    exa.cortex_pb.CortexStepExecuteBrowserJavaScript execute_browser_javascript = 73;
    exa.cortex_pb.CortexStepListBrowserPages list_browser_pages = 74;
    exa.cortex_pb.CortexStepCaptureBrowserScreenshot capture_browser_screenshot = 75;
    exa.cortex_pb.CortexStepClickBrowserPixel click_browser_pixel = 76;
    exa.cortex_pb.CortexStepReadTerminal read_terminal = 77;
    exa.cortex_pb.CortexStepCaptureBrowserConsoleLogs capture_browser_console_logs = 78;
    exa.cortex_pb.CortexStepReadBrowserPage read_browser_page = 79;
    exa.cortex_pb.CortexStepBrowserGetDom browser_get_dom = 80;
    exa.cortex_pb.CortexStepCodeSearch code_search = 85;
    exa.cortex_pb.CortexStepBrowserInput browser_input = 86;
    exa.cortex_pb.CortexStepBrowserMoveMouse browser_move_mouse = 87;
    exa.cortex_pb.CortexStepBrowserSelectOption browser_select_option = 88;
    exa.cortex_pb.CortexStepBrowserScrollUp browser_scroll_up = 89;
    exa.cortex_pb.CortexStepBrowserScrollDown browser_scroll_down = 90;
    exa.cortex_pb.CortexStepBrowserClickElement browser_click_element = 91;
    exa.cortex_pb.CortexStepBrowserListNetworkRequests browser_list_network_requests = 137;
    exa.cortex_pb.CortexStepBrowserGetNetworkRequest browser_get_network_request = 138;
    exa.cortex_pb.CortexStepBrowserPressKey browser_press_key = 92;
    exa.cortex_pb.CortexStepTaskBoundary task_boundary = 93;
    exa.cortex_pb.CortexStepNotifyUser notify_user = 94;
    exa.cortex_pb.CortexStepCodeAcknowledgement code_acknowledgement = 95;
    exa.cortex_pb.CortexStepInternalSearch internal_search = 96;
    exa.cortex_pb.CortexStepBrowserSubagent browser_subagent = 97;
    exa.cortex_pb.CortexStepKnowledgeGeneration knowledge_generation = 102;
    exa.cortex_pb.CortexStepGenerateImage generate_image = 104;
    exa.cortex_pb.CortexStepBrowserScroll browser_scroll = 101;
    exa.cortex_pb.CortexStepBrowserResizeWindow browser_resize_window = 109;
    exa.cortex_pb.CortexStepBrowserDragPixelToPixel browser_drag_pixel_to_pixel = 110;
    exa.cortex_pb.CortexStepBrowserMouseWheel browser_mouse_wheel = 125;
    exa.cortex_pb.CortexStepBrowserMouseUp browser_mouse_up = 134;
    exa.cortex_pb.CortexStepBrowserMouseDown browser_mouse_down = 135;
    exa.cortex_pb.CortexStepBrowserRefreshPage browser_refresh_page = 139;
    exa.cortex_pb.CortexStepConversationHistory conversation_history = 111;
    exa.cortex_pb.CortexStepKnowledgeArtifacts knowledge_artifacts = 112;
    exa.cortex_pb.CortexStepSendCommandInput send_command_input = 113;
    exa.cortex_pb.CortexStepSystemMessage system_message = 114;
    exa.cortex_pb.CortexStepWait wait = 115;
    exa.cortex_pb.CortexStepKIInsertion ki_insertion = 129;
    exa.cortex_pb.CortexStepWorkspaceAPI workspace_api = 136;
    exa.cortex_pb.CortexStepInvokeSubagent invoke_subagent = 143;
    exa.cortex_pb.CortexStepCompileApplet compile_applet = 106;
    exa.cortex_pb.CortexStepInstallAppletDependencies install_applet_dependencies = 107;
    exa.cortex_pb.CortexStepInstallAppletPackage install_applet_package = 108;
    exa.cortex_pb.CortexStepSetUpFirebase set_up_firebase = 121;
    exa.cortex_pb.CortexStepRestartDevServer restart_dev_server = 123;
    exa.cortex_pb.CortexStepDeployFirebase deploy_firebase = 124;
    exa.cortex_pb.CortexStepLintApplet lint_applet = 126;
    exa.cortex_pb.CortexStepShellExec shell_exec = 127;
    exa.cortex_pb.CortexStepDefineNewEnvVariable define_new_env_variable = 128;
    exa.cortex_pb.CortexStepWriteBlob write_blob = 142;
    exa.cortex_pb.CortexStepAgencyToolCall agency_tool_call = 116;
    exa.cortex_pb.CortexStepUserInput user_input = 19;
    exa.cortex_pb.CortexStepPlannerResponse planner_response = 20;
    exa.cortex_pb.CortexStepViewFile view_file = 14;
    exa.cortex_pb.CortexStepListDirectory list_directory = 15;
    exa.cortex_pb.CortexStepDeleteDirectory delete_directory = 105;
    exa.cortex_pb.CortexStepCheckpoint checkpoint = 30;
    exa.cortex_pb.CortexStepFileChange file_change = 98;
    exa.cortex_pb.CortexStepMove move = 100;
    exa.cortex_pb.CortexStepEphemeralMessage ephemeral_message = 103;
    exa.cortex_pb.CortexStepDummy dummy = 7;
    exa.cortex_pb.CortexStepPlanInput plan_input = 8;
    exa.cortex_pb.CortexStepFileBreakdown file_breakdown = 21;
    exa.cortex_pb.CortexStepWriteToFile write_to_file = 23;
    exa.cortex_pb.CortexStepProposeCode propose_code = 32;
    exa.cortex_pb.CortexStepSearchKnowledgeBase search_knowledge_base = 35;
    exa.cortex_pb.CortexStepLookupKnowledgeBase lookup_knowledge_base = 39;
    exa.cortex_pb.CortexStepManagerFeedback manager_feedback = 48;
    exa.cortex_pb.CortexStepToolCallProposal tool_call_proposal = 49;
    exa.cortex_pb.CortexStepToolCallChoice tool_call_choice = 50;
    exa.cortex_pb.CortexStepTrajectoryChoice trajectory_choice = 52;
    exa.cortex_pb.CortexStepCheckDeployStatus check_deploy_status = 59;
    exa.cortex_pb.CortexStepPostPrReview post_pr_review = 60;
    exa.cortex_pb.CortexStepFindAllReferences find_all_references = 65;
    exa.cortex_pb.CortexStepBrainUpdate brain_update = 66;
    exa.cortex_pb.CortexStepRunExtensionCode run_extension_code = 68;
    exa.cortex_pb.CortexStepAddAnnotation add_annotation = 70;
    exa.cortex_pb.CortexStepProposalFeedback proposal_feedback = 71;
    exa.cortex_pb.CortexStepRetrieveMemory retrieve_memory = 43;
    exa.cortex_pb.CortexStepMemory memory = 38;
  }
}

enum ExecutionStatus {
  EXECUTION_STATUS_UNSPECIFIED = 0;
  EXECUTION_STATUS_IDLE = 1;
  EXECUTION_STATUS_RUNNING = 2;
  EXECUTION_STATUS_CANCELING = 3;
}
